openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-project
spec:
  selector:
    matchLabels:
      app: simple-project
  replicas: 1
  template:
    metadata:
      labels:
        app: simple-project
    spec:
      containers:
      - name: simple-project
        image: alexanastasyev/simple-project
        ports:
        - containerPort: 8090
