openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-project-service
spec:
  selector:
    app: simple-project
  ports:
    - port: 8090
      targetPort: 8090
