openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simple-project-route
spec:
  to:
    kind: Service
    name: simple-project-service
  port:
    targetPort: 8090
